--- a/templates/base.html
+++ b/templates/base.html
@@ -8,11 +8,11 @@
   <h3><a href="/">MORIA VISUALS</a></h3>
     {% if user.is_authenticated %}
       Hi {{ user.username }}! 
-{#        <a href="{% url 'logout' %}">Log Out</a>#}
-{#    {% else %}#}
-{#      <p>You are not logged in#}
-{#      <a href="{% url 'login' %}">Log In</a> |#}
-{#      <a href="{% url 'signup' %}">Sign Up</a></p>#}
+        <a href="{% url 'logout' %}">Log Out</a>
+    {% else %}
+      <p>You are not logged in
+      <a href="{% url 'login' %}">Log In</a> |
+      <a href="{% url 'signup' %}">Sign Up</a></p>
     {% endif %}
     {% if user.is_authenticated %}
         <a href="/admin">Admin panel</a>
