--- a/templates/base.html
+++ b/templates/base.html
@@ -17,8 +17,8 @@
     {% if user.is_authenticated %}
         <a href="/admin">Admin panel</a>
     {% endif %}
-{#      <a href="#contact">Contact</a>#}
-{#      <a href="/cart">Cart</a>#}
+      <a href="#contact">Contact</a>
+      <a href="{% url 'carts:cart' %}">Cart</a>
   </div>
   <main>
     {% block content %}
