--- a/templates/orders/order_confirmed.html
+++ b/templates/orders/order_confirmed.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Dziękujemy za złożenie zamówienia</h1>
-<p>Zrobimy co w naszej mocy, aby dotarło jak najszybciej :)</p>
+    <h1>Dziękujemy za złożenie zamówienia</h1>
+    <p>Zrobimy co w naszej mocy, aby dotarło jak najszybciej :)</p>
+    <h4>Potwierdzenie zostało wysłane na adres {{ customer.email }}</h4>
     <a href="/">Wróć do sklepu</a>
 {% endblock %}
