--- a/templates/orders/order_confirmed.html
+++ b/templates/orders/order_confirmed.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Dziękujemy za złożenie zamówienia</h1>
-    <p>Zrobimy co w naszej mocy, aby dotarło jak najszybciej :)</p>
-    <h4>Potwierdzenie zostało wysłane na adres {{ customer.email }}</h4>
-    <a href="/">Wróć do sklepu</a>
+    <h1>Thank you for placing your order</h1>
+    <p>We will do everything we can, to deliver it as soon, as possible :)</p>
+    <h4>We send order confirmation on {{ customer.email }}</h4>
+    <a href="/">Back to home page</a>
 {% endblock %}
