--- a/templates/carts/cart.html
+++ b/templates/carts/cart.html
@@ -3,19 +3,19 @@
 {% block content %}
 <h2>{{ text }}</h2>
 {%  if is_empty == False %}
-    <h2>Koszyk:</h2>
+    <h2>Cart:</h2>
     <ul>
         {% for item in cart %}
         <li><a href={{item.url}}>{{ item.name }}</a>: {{ item.size }} x{{ item.count }}
         <p>{{ item.sum_item }} zł</p>
-        <p><a href="{% url 'carts:edit_cart_item' item.id %}">edytuj</a>
-        <a href="{% url 'carts:delete_cart_item' item.id %}">usuń</a></p></li>
+        <p><a href="{% url 'carts:edit_cart_item' item.id %}">edit</a>
+        <a href="{% url 'carts:delete_cart_item' item.id %}">delete</a></p></li>
         {% endfor %}
     </ul>
-    <h3>Sum: {{ summary.sum }}zł ({{ summary.number_of_items }} rzeczy)</h3>
+    <h3>Sum: {{ summary.sum }}zł ({{ summary.number_of_items }} items)</h3>
     <form action="{% url 'orders:confirm_address' %}">
-        <input type="submit" value="Złóż zamówienie" />
+        <input type="submit" value="Order" />
     </form>
-    Lub <a href="/">wróć do sklepu</a>, aby zamówić coś jeszcze!
+    Or <a href="/">go back</a>, do get something more!
 {% endif %}
 {% endblock %}
