--- a/templates/orders/enter_address.html
+++ b/templates/orders/enter_address.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2>Adres wysyłki</h2>
+<h2>Shipping address</h2>
 <form method="post" >
   {% csrf_token %}
   {{ form.as_p }}
-  <button type="submit">Potwierdź</button>
+  <button type="submit">Submit</button>
 </form>
 {% endblock %}
