--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <div class="topnav">
-  <h3><a href="/">MORIA VISUALS</a></h3>
+  <h3><a href="{% url 'products:home_page'%}">MORIA VISUALS</a></h3>
     {% if user.is_authenticated %}
       Hi {{ user.username }}! 
         <a href="{% url 'logout' %}">Log Out</a>
@@ -14,7 +14,7 @@
       <a href="{% url 'login' %}">Log In</a> |
       <a href="{% url 'signup' %}">Sign Up</a></p>
     {% endif %}
-    {% if user.is_authenticated %}
+    {% if user.is_superuser %}
         <a href="/admin">Admin panel</a>
     {% endif %}
       <a href="#contact">Contact</a>
