--- a/templates/products/products_list.html
+++ b/templates/products/products_list.html
@@ -1,5 +1,4 @@
 {% extends "base.html" %}
-
 {% block title %}Moria Visuals{% endblock %}
 
 {% block content %}
@@ -7,7 +6,8 @@
 <ul>
     {% for product in products %}
     <li><a href={{product.url}}><p>{{ product.name }}</p></a>
-    <p>{{ product.price }} zł</p></li>
+        <img src="{{ MEDIA_URL }}{{ product.photo}}" alt="">
+        <p>{{ product.price }} zł</p></li>
     {% endfor %}
 </ul>
 {% endblock %}
