--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,11 @@
+
 body{
-    background-color: #ce8483;
+    background-color: #1b6d85;
 }
+h1,h2,h3,h4{
+    color: #000000;
+}
+a{
+    color: #000000;
+}
+
