--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,11 +1,106 @@
-
 body{
     background-color: #1b6d85;
+    width: 100%;
+    margin: 0;
+    padding: 0;
 }
 h1,h2,h3,h4{
-    color: #000000;
-}
-a{
-    color: #000000;
+    color: #f2f2f2;
 }
 
+a{
+    color: #f2f2f2;
+}
+
+.topnav {
+    background-color: #000000;
+    overflow: hidden;
+    width: 100%;
+    display: flex;
+    height: 50px;
+}
+
+.topnav-l, .topnav-c, .topnav-r {
+    display: flex;
+    align-items: center;
+}
+
+.topnav-c{
+    justify-content: center;
+}
+
+.topnav-r{
+    justify-content: right;
+}
+
+.topnav div {
+    flex: 0 1 33.33%;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a{
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    border-bottom: 3px solid transparent;
+}
+
+.topnav a:hover {
+    border-bottom: 3px solid red;
+}
+
+/* Dropdown container - needed to position the dropdown content */
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+/* Style the dropdown button to fit inside the topnav */
+.dropdown .dropbtn {
+      font-size: 17px;
+      border: none;
+      outline: none;
+      color: white;
+      padding: 14px 16px;
+      background-color: inherit;
+      font-family: inherit;
+      min-width: 160px;
+      margin: 0;
+}
+
+/* Style the dropdown content (hidden by default) */
+.dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #2f2f2f;
+      min-width: 160px;
+      width: inherit;
+      box-shadow: 8px 8px 8px 8px rgba(0,0,0,0.2);
+      z-index: 1;
+}
+
+/* Style the links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+}
+
+ /*Add a dark background on topnav links and the dropdown button on hover */
+.dropdown:hover .dropbtn {
+    /*background-color: #2f2f2f;*/
+    color: red;
+}
+
+
+/* Show the dropdown menu when the user moves the mouse over the dropdown button */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
