--- a/templates/carts/cart.html
+++ b/templates/carts/cart.html
@@ -9,7 +9,7 @@
         <h2>Cart:</h2>
         <ul>
             {% for item in cart %}
-            <li><a href={{item.url}}>{{ item.name }}</a>: {{ item.size }} x{{ item.count }}
+            <li><a href="{% url 'products:detail_view' item.product_id %}">{{ item.name }}</a>: {{ item.size }} x{{ item.count }}
             <p>{{ item.sum_item }} zł</p>
             <p><a href="{% url 'carts:edit_cart_item' item.id %}">edit</a>
             <a href="{% url 'carts:delete_cart_item' item.id %}">delete</a></p></li>
