--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,7 +10,9 @@ h1,h2,h3,h4{
 
 a{
     color: #f2f2f2;
+    text-decoration: none;
 }
+
 
 .topnav {
     background-color: #000000;
@@ -80,7 +82,7 @@ a{
       min-width: 160px;
       width: inherit;
       box-shadow: 8px 8px 8px 8px rgba(0,0,0,0.2);
-      z-index: 1;
+      z-index: 2;
 }
 
 /* Style the links inside the dropdown */
