--- a/templates/products/product_details.html
+++ b/templates/products/product_details.html
@@ -1,26 +1,32 @@
 {% extends "base.html" %}
-
+{% load static %}
+{% block links %}
+    <link rel="stylesheet" type="text/css" href="/static/css/products/product_details.css?{% now "U" %}">
+{% endblock %}
 {% block content %}
-<a href="{% url 'products:home_page'%}"><p>Back</p></a>
-<h1>{{ product.name }}</h1>
-<img src="{{ MEDIA_URL }}{{ product.photo}}" alt="">
-<h2>{{ product.price }} zł</h2>
-<p>{{ product.description }}</p>
-<form action="{% url 'products:add_to_cart' product.id %}" method="post">
-    {% csrf_token %}
-    <fieldset>
-        {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
-        {% for size in sizes %}
-            {% if size.count >= 1 %}
-                <input type="radio" name="size" id="size{{ forloop.counter }}" value="{{ size.id }}">
-                <label for="size{{ forloop.counter }}">{{ size.size }}</label><br>
-            {% else %}
-                <input type="radio" name="size"  disabled>
-                <label for="size{{ forloop.counter }}">{{ size.size }} - not available</label><br>
-            {% endif %}
-        {% endfor %}
-    </fieldset>
-    <input type="submit" value="Add to cart">
-</form>
-
+    <div class="big-container">
+        <div class="photo-container"><img src="{{ MEDIA_URL }}{{ product.photo}}" alt=""></div>
+        <div class="item-container">
+            <h1 style="text-align: center">{{ product.name }}</h1>
+            <p style="margin-bottom: 0">Price: </p>
+            <h2 style="margin-top: 0">{{ product.price }} zł</h2>
+            <div class="size-choice-container">
+                <form action="{% url 'products:add_to_cart' product.id %}" method="post">
+                    {% csrf_token %}
+                    {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+                    <select name="size">
+                        {% for size in sizes %}
+                            {% if size.count >= 1 %}
+                                <option value="{{ size.id }}">{{ size.size }}</option>
+                            {% else %}
+                                <option value="{{ size.id }}" disabled>{{ size.size }} - not available</option>
+                            {% endif %}
+                        {% endfor %}
+                    </select>
+                    <div class="submit-btn"><input type="submit" value="Add to cart"></div>
+                </form>
+            </div>
+        <div style="color: white; font-size: 18px"><p>{{ product.description|linebreaks }}</p></div>
+        </div>
+    </div>
 {% endblock %}
