--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,6 +5,13 @@ body{
     width: 100%;
     overflow-y: scroll;
 }
+
+main{
+    margin-left: 150px;
+    margin-right: 150px;
+    margin-top: 50px;
+}
+
 h1,h2,h3,h4{
     color: #000000;
 }
@@ -53,7 +60,8 @@ a{
 }
 
 .topnav a:hover {
-    border-bottom: 3px solid #93c54b;
+    /*border-bottom: 3px solid #93c54b;*/
+    border-bottom: 3px solid #990000;
 }
 
 /* Dropdown container - needed to position the dropdown content */
@@ -99,7 +107,7 @@ a{
  /*Add a dark background on topnav links and the dropdown button on hover */
 .dropdown:hover .dropbtn {
     /*background-color: #2f2f2f;*/
-    color: #93c54b;
+    color: #990000;
 }
 
 
