--- a/static/css/products/product_details.css
+++ b/static/css/products/product_details.css
@@ -1,7 +1,15 @@
+body{
+    background-image: url("../../images/background3.png");
+}
+
 .big-container{
     display: flex;
     height: 500px;
     margin: 50px 150px;
+}
+
+h1,h2,h3,h4,p{
+    color: white;
 }
 
 .item-container, .photo-container{
@@ -40,7 +48,7 @@ option[disabled] {
 }
 
 .submit-btn input[type="submit"] {
-    background-color: #23282e;
+    background-color: #0e1113;
     border: none;
     width: 200px;
     color: white;
@@ -54,5 +62,5 @@ option[disabled] {
 }
 
 .submit-btn input[type="submit"]:hover{
-    background-color: #0e1113;
+    background-color: #113e4b;
 }
