sorting added in homeview

--- a/templates/products/products_list.html
+++ b/templates/products/products_list.html
@@ -15,7 +15,8 @@
             </div>
             <div class="filter-group2"><b>Price</b> {{ filter.form.price__gte }} | {{ filter.form.price__lte }}</div>
             <div class="filter-group3"><b>Product name</b> {{ filter.form.name }}</div>
-            <div class="filter-group4"><input class="filter-button" type="submit" value="FILTER"/></div>
+            <div class="filter-group4"><input class="filter-button" type="submit" value="SEARCH"/></div>
+            <div class="filter-group5"><b>Sort by</b> {{ filter.form.order_by }}</div>
         </form>
     </div>
     <br>
