--- a/static/css/base.css
+++ b/static/css/base.css
@@ -66,21 +66,23 @@ a{
 
 /* Dropdown container - needed to position the dropdown content */
 .dropdown {
-  float: left;
-  overflow: hidden;
+    float: left;
+    overflow: hidden;
+    cursor: pointer;
 }
 
 /* Style the dropdown button to fit inside the topnav */
 .dropdown .dropbtn {
-      font-size: 17px;
-      border: none;
-      outline: none;
-      color: white;
-      padding: 14px 16px;
-      background-color: inherit;
-      font-family: inherit;
-      min-width: 160px;
-      margin: 0;
+    font-size: 17px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    min-width: 160px;
+    margin: 0;
+    cursor: pointer;
 }
 
 /* Style the dropdown content (hidden by default) */
