--- a/static/css/products/products_list.css
+++ b/static/css/products/products_list.css
@@ -14,9 +14,9 @@ main{
     top: 0;
 }
 
-.filter-group1, .filter-group2, .filter-group3, .filter-group4{
+.filter-group1, .filter-group2, .filter-group3, .filter-group4, .filter-group5{
     display: inline-block;
-    width: calc(25% - 10px);
+    width: calc(20% - 10px);
     margin: 10px 0;
     height: 30px;
     font-size: 16px;
@@ -38,14 +38,22 @@ main{
 .filter-group2 input[type="number"] {
     vertical-align: middle;
     margin: 0 10px;
+    padding: 2px 10px;
 }
 
-.filter-group3{
+.filter-group3, .filter-group5{
   text-align: center;
 }
 
+.filter-group5 select{
+    padding: 2px 10px;
+    width: 200px;
+    cursor: pointer;
+}
+
 .filter-group3 input[type='text']{
-  margin: 0 10px;
+    margin: 0 10px;
+    padding: 2px 10px;
 }
 
 .filter-group4{
