customer orders view added

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -21,6 +21,10 @@ a{
     text-decoration: none;
 }
 
+input[type='submit'] {
+    padding: 10px 10px;
+    margin: 10px 10px;
+}
 
 .topnav {
     background-color: #000000;
