--- a/static/css/products/product_details.css
+++ b/static/css/products/product_details.css
@@ -1,6 +1,6 @@
-body{
-    background-image: url("../../images/background3.png");
-}
+/*body{*/
+/*    background-image: url("../../images/background3.png");*/
+/*}*/
 
 .big-container{
     display: flex;
