--- a/templates/products/product_details.html
+++ b/templates/products/product_details.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
     <div class="big-container">
-       <div class="photo-container">{# <img src="{{ MEDIA_URL }}{{ product.photo}}" alt="">#}</div>
+       <div class="photo-container"><img src="{{ MEDIA_URL }}{{ product.photo}}" alt=""></div>
         <div class="item-container">
             <h1 style="text-align: center">{{ product.name }}</h1>
             <p style="margin-bottom: 0">Price: </p>
